--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  format:
+  dart-format:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,3 +16,19 @@ jobs:
 
       - name: Run dart format
         run: dart format --output=none --set-exit-if-changed .
+
+  build-apk:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu'
+        java-version: '11'
+    - uses: subosito/flutter-action@v2
+      with:
+        channel: 'stable'
+        cache: true
+    - run: flutter pub get
+    - run: flutter build apk
