added image picker dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   github_sign_in: 0.0.5-dev.4
   font_awesome_flutter: ^10.1.0
   html: ^0.15.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
