--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # Connactivity Dependencies
+  shared_preferences: ^2.0.17
+  introduction_screen: ^3.1.4
   firebase_auth: ^4.1.2
   google_sign_in: ^5.3.1
   github_sign_in: 0.0.5-dev.4
