--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   html: ^0.15.0
   image_picker: ^0.8.5+3
   flutter_pagination: ^0.0.1
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/conn_icon.png"
 
 dev_dependencies:
   flutter_test:
